projects/compiler/test/parser/while_error_as_expr.out
Error at %FILE_NAME%:1:9
Unexpected token 'while':
  |  val x = while true {}
             ^